Fixed stretched profile picture in transactions

--- a/hobbysite/merchstore/static/merchstore/styles/transactions.css
+++ b/hobbysite/merchstore/static/merchstore/styles/transactions.css
@@ -14,6 +14,7 @@ a {
 }
 .buyer-container > div:nth-child(1) > img {
     border-radius: 50%;
+    aspect-ratio: 1;
     height: 3rem;
     display: inline-block;
     margin-right: .5rem;
